2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Tests.Rules.Performance.csproj: Activate makefile integration for all
	the rules projects. Remove the old mdp files as they are no longer
	needed.

2008-10-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnneededFieldInitializationTest.cs: Fix a failure when 
	tests are compiled with gmcs. csc ignore such initialization.

2008-10-29  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnneededFieldInitializationTest.cs: Commit the real tests
	and not a dupe of the rule. Thanks to Jesse for pointing this out.

2008-10-24  Sebastien Pouliot  <sebastien@ximian.com>

	* CompareWithStringEmptyEfficientlyTest.cs: Add new test case for
	something that was not a bug after all :)

2008-10-13  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderCustomAccessorsForNonVisibleEventsTest.cs: Remove 
	unneeded namespace. Fix copy-paste error in tests.
	* EmptyDestructorTest.cs: Convert to new, shorter, syntax for 
	tests. Remove unneeded namespaces. More coverage.
	* IDisposableWithDestructorWithoutSuppressFinalizeTest.cs: 
	Convert to new, shorter, syntax for tests. Remove unneeded 
	namespaces. More coverage.
	* ImplementEqualsTypeTest.cs: More coverage.
	* RemoveUnusedLocalVariablesTest.cs: Remove unneeded namespaces.
	More coverage.

2008-10-12  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnusedPrivateFieldsTest.cs: More coverage.
	* CompareWithStringEmptyEfficientlyTest.cs: Remove unneeded 
	namespaces. More coverage. Re-active Object.Equals test.
	* DontIgnoreMethodResultTest.cs: Convert to new, shorter, syntax
	for tests. Remove unneeded namespaces. More coverage.

2008-10-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidUnneededFieldInitializationTest.cs: New. Unit tests for
	AvoidUnneededFieldInitializationRule.
	* PreferLiteralOverInitOnlyFieldsTest.cs: New. Unit tests for
	PreferLiteralOverInitOnlyFieldsRule.

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com> 
