@@ -1,3 +1,8 @@
+2008-11-09  Jesse Jones  <jesjones@mindspring.com>
+
+	* AvoidRepetitiveCastsTest.cs: Added some more tests (and removed one)
+	for the false positive rule fixes.
+
 2008-11-07  Alan McGovern  <amcgovern@novell.com>
 
 	* Tests.Rules.Performance.csproj: Activate makefile integration for all
